--- a/ONG/index.html
+++ b/ONG/index.html
@@ -7,23 +7,30 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="myid">Otter Nonsense Games</h1>
+<nav class="group">
 
-    <p>Video game studio owned and operated by Sarah and Patrick Brown.</p>
+<ul class="links">
+    <li class="link"><a href="https://brobrogames.itch.io/" target="_blank">itch.io</a></li>
+    <li class="link"><a href="https://www.twitch.tv/0tter_nonsense" target="_blank">twitch.tv</a></li>
+    <li class="link"><a href="https://twitter.com/BroBro_Games" target="_blank">twitter</a>
+</ul>
+</nav>
 
-    <p>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+<h1><img src="https://i.imgur.com/t5ntfwQ.jpeg" alt="otter" id="otter">tter Nonsense Games</h1>
 
-    <h2>Some of our work:</h2>
-    <ul class="games">
-        <li>Asteroids</li>
-        <li>Hampter</li>
-        <li>Momento the Game</li>
-    </ul>
+<p class="intro">Video game studio owned and operated by Sarah and Patrick Brown.</p>
 
-    <ul class="links">
-        <li class="link"><a href="https://brobrogames.itch.io/" target="_blank">itch.io</a></li>
-        <li class="link"><a href="https://www.twitch.tv/0tter_nonsense" target="_blank">twitch.tv</a></li>
-        <li class="link"><a href="https://twitter.com/BroBro_Games" target="_blank">twitter</a>
-    </ul>
+
+<div class="work">
+    <h2>Some of our work</h2>
+<ul class="games">
+    <li class="game">Asteroids</li>
+    <li class="game">Hampter</li>
+    <li class="game">Momento</li>
+</ul>
+</div>
+
 </body>
+
+
 </html>
