--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet">
     <title>MyPortfolio</title>
 </head>
 <body>
     <h1>Hi, I'm Sarah and I'm just doing my best out here &#9787;</h1>
     <div class="codingsummary">
-        <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, JavaScript--with a dollop of Python and Godot on the side. </p>
+        <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, JavaScript&mdash;with a dollop of Python and Godot on the side. </p>
     </div>
     <div class="workexperience">
         <p>My work experience has largely existed in the customer service industry. I have experience in POS, managing staff, ordering and maintaining inventory, food preparation and cooking, taking reservations, bartending, and even throwing boxes around in a UPS warehouse. </p>
