--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,19 +12,23 @@
 <body>
     <div class="wrapper">
         <h1>Hi, I'm Sarah and I'm just doing my best out here &#9787;</h1>
-        <div class="codingsummary">
-            <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, JavaScript&mdash;with a dollop of Python and Godot on the side. </p>
-        </div>
-        <div class="workexperience">
-            <p>My work experience has largely existed in the customer service industry. I have experience in POS, managing staff, ordering and maintaining inventory, food preparation and cooking, taking reservations, bartending, and even throwing boxes around in a UPS warehouse. </p>
-        </div>
-        <div class="projects">
-            <h2>Here are some of the projects I have worked on while following Frontend Masters courses:</h2>
-            <ul class="webpages">
-                <li class="page"><a href="#" target="_blank">Otter Nonsense Games</a></li>
-                <li class="page"><a href="#" target="_blank">Photography</a></li>
-                <li class="page"><a href="#" target="_blank">Alien Abduction Form</a></li>
-            </ul>
+        <div class="aboutme">
+            <div class="myprojects">
+                <div class="codingsummary">
+                    <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, JavaScript&mdash;with a dollop of Python and Godot on the side. </p>
+                </div>
+                <div class="workexperience">
+                    <p>My work experience has largely existed in the customer service industry. I have experience in POS, managing staff, ordering and maintaining inventory, food preparation and cooking, taking reservations, bartending, and even throwing boxes around in a UPS warehouse. </p>
+                </div>
+            </div>
+            <div class="projects">
+                <h2>Here are some of the projects I have worked on while following Frontend Masters courses:</h2>
+                <ul class="webpages">
+                    <li class="page"><a href="#" target="_blank">Otter Nonsense Games</a></li>
+                    <li class="page"><a href="#" target="_blank">Photography</a></li>
+                    <li class="page"><a href="#" target="_blank">Alien Abduction Form</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <footer>
