--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,10 +15,12 @@
         <div class="aboutme">
             <div class="myprojects">
                 <div class="codingsummary">
-                    <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, JavaScript&mdash;with a dollop of Python and Godot on the side. </p>
+                    <p>I am self-taught, mostly using Codecademy and Frontend Masters to level up my skills in HTML, CSS, and JavaScript&mdash;with a dollop of Python and Godot on the side. </p>
                 </div>
                 <div class="workexperience">
                     <p>My work experience has largely existed in the customer service industry. I have experience in POS, managing staff, ordering and maintaining inventory, food preparation and cooking, taking reservations, bartending, and even throwing boxes around in a UPS warehouse. </p>
+                    <br>
+                    <p>&nbsp;</p>
                 </div>
             </div>
             <div class="projects">
@@ -30,13 +32,14 @@
                 </ul>
             </div>
         </div>
+        <footer>
+            <ul class="links">
+                <li class="link"><a href="#" target="_blank">GitHub</a></li>
+                <li class="link"><a href="#" target="_blank">Codepen</a></li>
+                <li class="link"><a href="#" target="_blank">Linkedin</a></li>
+            </ul>
+        </footer>
     </div>
-    <footer>
-        <ul class="links">
-            <li class="link"><a href="#" target="_blank">GitHub</a></li>
-            <li class="link"><a href="#" target="_blank">Codepen</a></li>
-            <li class="link"><a href="#" target="_blank">Linkedin</a></li>
-        </ul>
-    </footer>
+    
 </body>
 </html>
