--- a/WebDev HTML/index.html
+++ b/WebDev HTML/index.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My💙Project</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="about.html">About</a>
+    <a href="about.html" class="about-link">About</a>
     <div class="intro">
         <h1>HEY HI HELLO THERE</h1>
         <h2 class="brief-introduction">My name is Sarah and this is <em>NOT</em> my first webpage, but I need the practice so here I am!</h2>
     </div>
     <div class="some-posts">
-        <div class="post1">
+        <div class="post post1">
             <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
             <img src="https://placekitten.com/200/300" alt="kitten">
             <h3 class="author">-Sarah Bobarah</h3>
             <p class="date">January 31, 2011</p>
         </div>
-        <div class="post2">
+        <div class="post post2">
             <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
             <img src="https://picsum.photos/200" alt="randomized image">
             <h3 class="author">-Sarah Bobarah</h3>
             <p class="date">January 31, 2011</p>
         </div>
-        <div class="post3">
+        <div class="post post3">
             <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
             <p class="ipsum-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi deleniti nemo, quasi necessitatibus rem?</p>
             <img src="https://picsum.photos/300" alt="randomized image">
             <h3 class="author">-Sarah Bobarah</h3>
             <p class="date">January 31, 2011</p>
         </div>
-        <div class="post4">
+        <div class="post post4">
             <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
             <img src="https://picsum.photos/200/300" alt="randomized image">
             <h3 class="author">-Sarah Bobarah</h3>
             <p class="date">January 31, 2011</p>
         </div>
-        <div class="post5">
+        <div class="post post5">
             <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
             <p class="ipsum-25">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem suscipit illo exercitationem consectetur dolores, id obcaecati, nesciunt tempore ipsam, excepturi cum dolorem provident earum laudantium?</p>
             <img src="https://picsum.photos/400/300" alt="randomized image">
