Moved intro box

--- a/WebDev HTML/index.html
+++ b/WebDev HTML/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="post2 post">
               <p class="ipsum-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, sunt.</p>
-              <img src="https://picsum.photos/300" alt="randomized image">
+              <img src="https://picsum.photos/300/400" alt="randomized image">
               <h3 class="author">-Sarah Bobarah</h3>
               <p class="date">January 31, 2011</p>
           </div>
